--- a/css/style.css
+++ b/css/style.css
@@ -22797,6 +22797,8 @@ html:not([dir=rtl]) .noUi-horizontal .noUi-handle {
   box-shadow: 0 15px 20px 0 rgba(58, 122, 254, 0.15);
   border-bottom-left-radius: 0.375rem;
   border-bottom-right-radius: 0.375rem; }
+.accordion .accordion__body--text {
+  padding: 0.875rem 0.25rem !important; }
 .accordion-danger .accordion__header {
   background: #f25767;
   border-color: #f25767;
@@ -29158,7 +29160,6 @@ html[dir="rtl"] [direction="rtl"][data-sidebar-style="compact"]:not([data-layout
 .owl-carousel-info1 .owl-carousel {
   max-height: 250px !important; }
 .owl-carousel-info1 .owl-item {
-  width: 250px !important;
   max-height: 250px !important; }
 
 .title-colapsed {
@@ -29179,10 +29180,22 @@ html[dir="rtl"] [direction="rtl"][data-sidebar-style="compact"]:not([data-layout
   .accordion-with-icon .accordion__item .accordion__body--custom {
     padding: 15px 5px; }
     .accordion-with-icon .accordion__item .accordion__body--custom .title {
-      font-size: 18px; }
+      font-size: 16px; }
+    .accordion-with-icon .accordion__item .accordion__body--custom p {
+      font-size: 14px; }
     .accordion-with-icon .accordion__item .accordion__body--custom .image-wrapper img {
       width: 100%;
       height: 100%; }
+    .accordion-with-icon .accordion__item .accordion__body--custom .accordion-list {
+      padding: 10px; }
+      .accordion-with-icon .accordion__item .accordion__body--custom .accordion-list li {
+        list-style: inside !important; }
+      .accordion-with-icon .accordion__item .accordion__body--custom .accordion-list.accordion-list--num {
+        padding-left: 18px; }
+        .accordion-with-icon .accordion__item .accordion__body--custom .accordion-list.accordion-list--num li {
+          list-style: auto !important; }
+    .accordion-with-icon .accordion__item .accordion__body--custom .name {
+      margin-top: 10px; }
 .accordion-with-icon .icon {
   background: #FFF;
   color: #3A7AFE;
@@ -29242,5 +29255,64 @@ html[dir="rtl"] [direction="rtl"][data-sidebar-style="compact"]:not([data-layout
     background: #3a7afe; }
     .user-apps ul li.active .title {
       color: #FFF; }
+
+.modal-footer.model-footer--left {
+  justify-content: start; }
+
+.mobile-view {
+  width: 300px;
+  height: 91vh;
+  position: fixed;
+  right: -300px;
+  top: 81px;
+  z-index: 999;
+  background: #fff;
+  transition: all 0.8s; }
+  .mobile-view .card {
+    background: #e8ebf4;
+    height: 100%;
+    border-radius: 0; }
+  .mobile-view .mobile__close {
+    position: absolute;
+    cursor: pointer;
+    background-repeat: no-repeat;
+    left: -32px;
+    top: 50%;
+    margin-top: 93px;
+    padding-top: 10px;
+    color: #fff;
+    width: 186px;
+    height: 32px;
+    transform: rotate(-90deg);
+    transform-origin: left top;
+    text-align: center;
+    z-index: 400;
+    background-color: #3A7AFE; }
+  .mobile-view.active-view {
+    right: 0; }
+  .mobile-view .screen-inner {
+    position: relative; }
+    .mobile-view .screen-inner .mobile-image {
+      max-width: 100%;
+      max-height: 100%; }
+    .mobile-view .screen-inner .iframe-inner {
+      position: absolute;
+      left: 16px;
+      top: 33px;
+      width: 87%;
+      height: 90%;
+      z-index: 400;
+      overflow: hidden;
+      border-radius: 20px; }
+  @media (max-width: 767px) {
+    .mobile-view {
+      top: 60px;
+      height: 97vh; } }
+  @media (max-width: 575px) {
+    .mobile-view {
+      top: 60px;
+      height: 97vh; }
+      .mobile-view .screen-inner .iframe-inner {
+        left: 18px; } }
 
 /*# sourceMappingURL=style.css.map */
