--- a/scss/custom/_custom.scss
+++ b/scss/custom/_custom.scss
@@ -179,8 +179,7 @@
   .owl-carousel{
     max-height: 250px !important;
   } 
-	.owl-item{
-		width: 250px !important;
+	.owl-item{ 
     max-height: 250px !important;
 	} 
 }
@@ -209,7 +208,10 @@
     .accordion__body--custom{
       padding: 15px 5px;
       .title{
-        font-size : 18px
+        font-size : 16px
+      }
+      p{
+        font-size: 14px;
       }
       .image-wrapper{ 
         img{
@@ -217,6 +219,21 @@
           height: 100%;
         }
       } 
+      .accordion-list{
+        padding: 10px;
+        li{
+          list-style: inside !important;
+        }
+        &.accordion-list--num{
+          padding-left: 18px;
+          li{
+            list-style: auto !important;
+          }
+        }
+      }
+      .name{
+        margin-top : 10px;
+      }
     }
   }
   .icon{
@@ -228,6 +245,7 @@
     padding: 6px; 
   }
 }
+ 
 .help-contact{
   padding: 10px;
   display: flex;
@@ -312,4 +330,77 @@
       }
     }
   }
+}
+// side-menu
+.modal-footer {
+  &.model-footer--left{
+    justify-content: start;
+  }
+}
+
+// mobile-view
+.mobile-view{ 
+  width: 300px;
+  height: 91vh;
+  position: fixed;
+  right: -300px;
+  top: 81px;
+  z-index: 999;
+  background: #fff;
+  transition: all 0.8s;
+  .card{
+    background : #e8ebf4;
+    height: 100%;
+    border-radius: 0;
+  }
+  .mobile__close{
+    position: absolute;
+    cursor: pointer;
+    background-repeat: no-repeat;
+    left: -32px;
+    top: 50%;
+    margin-top: 93px;
+    padding-top: 10px;
+    color: #fff;
+    width: 186px;
+    height: 32px;
+    transform: rotate(-90deg);
+    transform-origin: left top;
+    text-align: center;
+    z-index: 400;
+    background-color: #3A7AFE; 
+  } 
+  &.active-view{
+    right: 0;
+  }
+  .screen-inner{
+    position: relative;
+    .mobile-image{
+      max-width: 100%;
+      max-height: 100%;
+    }
+    .iframe-inner{
+      position: absolute;
+      left: 16px;
+      top: 33px;
+      width: 87%;
+      height: 90%;
+      z-index: 400;
+      overflow: hidden;
+      border-radius: 20px; 
+    }
+  }
+  @media(max-width : 767px){
+    top: 60px;
+    height: 97vh; 
+  }
+  @media(max-width : 575px){
+    top: 60px;
+    height: 97vh; 
+    .screen-inner{
+      .iframe-inner{
+        left: 18px; 
+      }
+    }
+  } 
 }
