--- a/scss/main.css
+++ b/scss/main.css
@@ -22797,6 +22797,8 @@ html:not([dir=rtl]) .noUi-horizontal .noUi-handle {
   box-shadow: 0 15px 20px 0 rgba(58, 122, 254, 0.15);
   border-bottom-left-radius: 0.375rem;
   border-bottom-right-radius: 0.375rem; }
+.accordion .accordion__body--text {
+  padding: 0.875rem 0.25rem !important; }
 .accordion-danger .accordion__header {
   background: #f25767;
   border-color: #f25767;
@@ -29158,7 +29160,6 @@ html[dir="rtl"] [direction="rtl"][data-sidebar-style="compact"]:not([data-layout
 .owl-carousel-info1 .owl-carousel {
   max-height: 250px !important; }
 .owl-carousel-info1 .owl-item {
-  width: 250px !important;
   max-height: 250px !important; }
 
 .title-colapsed {
@@ -29176,11 +29177,25 @@ html[dir="rtl"] [direction="rtl"][data-sidebar-style="compact"]:not([data-layout
   @media (max-width: 567px) {
     .accordion-with-icon .accordion__item .accordion__header--text {
       font: small-caption; } }
-  .accordion-with-icon .accordion__item .accordion__body--text .image-wrapper {
-    width: 200px; }
-    .accordion-with-icon .accordion__item .accordion__body--text .image-wrapper img {
+  .accordion-with-icon .accordion__item .accordion__body--custom {
+    padding: 15px 5px; }
+    .accordion-with-icon .accordion__item .accordion__body--custom .title {
+      font-size: 16px; }
+    .accordion-with-icon .accordion__item .accordion__body--custom p {
+      font-size: 14px; }
+    .accordion-with-icon .accordion__item .accordion__body--custom .image-wrapper img {
       width: 100%;
       height: 100%; }
+    .accordion-with-icon .accordion__item .accordion__body--custom .accordion-list {
+      padding: 10px; }
+      .accordion-with-icon .accordion__item .accordion__body--custom .accordion-list li {
+        list-style: inside !important; }
+      .accordion-with-icon .accordion__item .accordion__body--custom .accordion-list.accordion-list--num {
+        padding-left: 18px; }
+        .accordion-with-icon .accordion__item .accordion__body--custom .accordion-list.accordion-list--num li {
+          list-style: auto !important; }
+    .accordion-with-icon .accordion__item .accordion__body--custom .name {
+      margin-top: 10px; }
 .accordion-with-icon .icon {
   background: #FFF;
   color: #3A7AFE;
@@ -29240,5 +29255,8 @@ html[dir="rtl"] [direction="rtl"][data-sidebar-style="compact"]:not([data-layout
     background: #3a7afe; }
     .user-apps ul li.active .title {
       color: #FFF; }
+
+.modal-footer.model-footer--left {
+  justify-content: start; }
 
 /*# sourceMappingURL=main.css.map */
