--- a/css/style.css
+++ b/css/style.css
@@ -24227,7 +24227,9 @@ button {
     .card.card--active .media-body .text-sm {
       color: #FFF; }
   .card.card--category {
-    margin-bottom: 20px; }
+    margin-bottom: 20px;
+    overflow-y: scroll;
+    height: 550px; }
 
 .transparent-card.card {
   background: transparent;
@@ -29211,7 +29213,7 @@ html[dir="rtl"] [direction="rtl"][data-sidebar-style="compact"]:not([data-layout
   align-items: center; }
 
 ::-webkit-scrollbar {
-  width: 10px; }
+  width: 6px; }
 
 ::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
@@ -29225,7 +29227,7 @@ html[dir="rtl"] [direction="rtl"][data-sidebar-style="compact"]:not([data-layout
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5); }
 
 ::-webkit-scrollbar-thumb:window-inactive {
-  background: rgba(58, 122, 254, 0.4); }
+  background: #DDD; }
 
 .data-info .table.table-striped tbody tr:nth-of-type(odd), .data-info .table.table-hover tr:hover {
   background-color: transparent !important; }
@@ -29297,13 +29299,120 @@ html[dir="rtl"] [direction="rtl"][data-sidebar-style="compact"]:not([data-layout
       max-height: 100%; }
     .mobile-view .screen-inner .iframe-inner {
       position: absolute;
-      left: 16px;
-      top: 33px;
-      width: 87%;
-      height: 90%;
+      left: 15px;
+      top: 14px;
+      width: 88%;
+      height: 95%;
       z-index: 400;
       overflow: hidden;
-      border-radius: 20px; }
+      background: #FFF;
+      padding-top: 23px;
+      background: #FFF; }
+      .mobile-view .screen-inner .iframe-inner::after {
+        content: "";
+        background: #DDD;
+        left: 40%;
+        width: 29px;
+        height: 4px;
+        position: absolute;
+        top: 8px;
+        z-index: 9;
+        border-radius: 5%; }
+      .mobile-view .screen-inner .iframe-inner::before {
+        content: "";
+        background: #DDD;
+        left: 60%;
+        width: 5px;
+        height: 5px;
+        position: absolute;
+        top: 8px;
+        z-index: 9;
+        border-radius: 50%; }
+      .mobile-view .screen-inner .iframe-inner .header-mobile {
+        position: absolute;
+        width: 100%;
+        padding: 2px;
+        background: #FFF; }
+        .mobile-view .screen-inner .iframe-inner .header-mobile .header-mobile__list {
+          display: flex;
+          justify-content: space-between; }
+          .mobile-view .screen-inner .iframe-inner .header-mobile .header-mobile__list li img {
+            width: 18px; }
+          .mobile-view .screen-inner .iframe-inner .header-mobile .header-mobile__list li .logo {
+            width: 85px; }
+      .mobile-view .screen-inner .iframe-inner .menu-mobile {
+        position: relative;
+        width: 100%;
+        height: 86%;
+        top: 31px; }
+        .mobile-view .screen-inner .iframe-inner .menu-mobile .card {
+          position: absolute;
+          overflow: auto;
+          margin-bottom: 0;
+          background: #FFF;
+          width: 100%;
+          box-shadow: none; }
+          .mobile-view .screen-inner .iframe-inner .menu-mobile .card .card-body {
+            padding: 0px; }
+            .mobile-view .screen-inner .iframe-inner .menu-mobile .card .card-body .nav {
+              background: #ebeef6;
+              margin-bottom: 0 !important;
+              width: 30%; }
+              .mobile-view .screen-inner .iframe-inner .menu-mobile .card .card-body .nav .nav-link {
+                font-size: 10px;
+                border-radius: 0;
+                width: 100%;
+                padding: 12px 6px;
+                font-weight: bold;
+                text-align: center; }
+            .mobile-view .screen-inner .iframe-inner .menu-mobile .card .card-body .tab-content {
+              padding: 5px;
+              width: 70%; }
+              .mobile-view .screen-inner .iframe-inner .menu-mobile .card .card-body .tab-content .card {
+                position: relative; }
+                .mobile-view .screen-inner .iframe-inner .menu-mobile .card .card-body .tab-content .card .accordion .accordion__header {
+                  padding: 5px;
+                  border: none; }
+                .mobile-view .screen-inner .iframe-inner .menu-mobile .card .card-body .tab-content .card .accordion .accordion__body {
+                  border: none; }
+                  .mobile-view .screen-inner .iframe-inner .menu-mobile .card .card-body .tab-content .card .accordion .accordion__body .style-imge {
+                    display: flex;
+                    width: 100%;
+                    margin-bottom: 10px; }
+                    .mobile-view .screen-inner .iframe-inner .menu-mobile .card .card-body .tab-content .card .accordion .accordion__body .style-imge.style-imge1 {
+                      display: flex;
+                      width: 100%; }
+                      .mobile-view .screen-inner .iframe-inner .menu-mobile .card .card-body .tab-content .card .accordion .accordion__body .style-imge.style-imge1 img {
+                        width: 100%; }
+                    .mobile-view .screen-inner .iframe-inner .menu-mobile .card .card-body .tab-content .card .accordion .accordion__body .style-imge.style-imge2 {
+                      display: flex;
+                      justify-content: space-between; }
+                      .mobile-view .screen-inner .iframe-inner .menu-mobile .card .card-body .tab-content .card .accordion .accordion__body .style-imge.style-imge2 img {
+                        width: 48%;
+                        margin: 2px; }
+                    .mobile-view .screen-inner .iframe-inner .menu-mobile .card .card-body .tab-content .card .accordion .accordion__body .style-imge.style-imge3 {
+                      display: flex;
+                      justify-content: space-between; }
+                      .mobile-view .screen-inner .iframe-inner .menu-mobile .card .card-body .tab-content .card .accordion .accordion__body .style-imge.style-imge3 img {
+                        width: 31.33333%;
+                        margin: 2px; }
+                .mobile-view .screen-inner .iframe-inner .menu-mobile .card .card-body .tab-content .card .accordion .accordion__header--text {
+                  font-size: 11px;
+                  padding: 0.675rem 0.5 !important; }
+                .mobile-view .screen-inner .iframe-inner .menu-mobile .card .card-body .tab-content .card .accordion .accordion__header--indicator {
+                  right: 0.5625rem;
+                  font-size: 8px; }
+      .mobile-view .screen-inner .iframe-inner .footer-mobile {
+        position: absolute;
+        width: 100%;
+        bottom: 0;
+        padding: 5px;
+        background: #FFF; }
+        .mobile-view .screen-inner .iframe-inner .footer-mobile .footer-mobile__list {
+          display: flex;
+          justify-content: space-between; }
+          .mobile-view .screen-inner .iframe-inner .footer-mobile .footer-mobile__list li img {
+            width: 30px; }
   @media (max-width: 767px) {
     .mobile-view {
       top: 60px;
@@ -29313,6 +29422,64 @@ html[dir="rtl"] [direction="rtl"][data-sidebar-style="compact"]:not([data-layout
       top: 60px;
       height: 97vh; }
       .mobile-view .screen-inner .iframe-inner {
-        left: 18px; } }
+        left: 16px; } }
+
+.style-imge {
+  display: flex;
+  width: 100%;
+  margin-bottom: 5px; }
+  .style-imge .img-wrapper {
+    position: relative; }
+    .style-imge .img-wrapper img {
+      width: 100%; }
+  .style-imge.style-imge1 {
+    display: flex;
+    width: 100%; }
+    .style-imge.style-imge1 img {
+      width: 100%; }
+  .style-imge.style-imge2 {
+    display: flex;
+    justify-content: space-between; }
+    .style-imge.style-imge2 img {
+      width: 48%;
+      margin: 2px; }
+  .style-imge.style-imge3 {
+    display: flex;
+    justify-content: space-between; }
+    .style-imge.style-imge3 .img-wrapper {
+      width: 31.33333%;
+      margin: 2px;
+      position: relative; }
+      .style-imge.style-imge3 .img-wrapper img {
+        width: 100%; }
+  .style-imge .img-wrapper .style__action {
+    position: absolute;
+    bottom: 0;
+    right: 0; }
+    .style-imge .img-wrapper .style__action ul {
+      display: flex; }
+      .style-imge .img-wrapper .style__action ul .btn {
+        padding: 3px !important;
+        margin: 5px; }
+
+.dd-handle:active {
+  box-shadow: 1px 1px 5px 1px #ddd; }
+
+.sidebar-item.active {
+  box-shadow: 1px 1px 5px 1px #181f39;
+  border-radius: 5px; }
+
+.modal.model--cancle .modal-header {
+  border-bottom: 0; }
+.modal.model--cancle .modal-body {
+  text-align: center; }
+  .modal.model--cancle .modal-body p {
+    color: #f25767;
+    margin: 30px 0;
+    font-weight: 600; }
+  .modal.model--cancle .modal-body .btn.btn-danger {
+    background-color: #f25767;
+    border-color: #f25767;
+    color: #FFF; }
 
 /*# sourceMappingURL=style.css.map */
