--- a/scss/custom/_custom.scss
+++ b/scss/custom/_custom.scss
@@ -254,7 +254,7 @@
 }
 
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 6px;
 }
 ::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
@@ -268,7 +268,7 @@
   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
 }
 ::-webkit-scrollbar-thumb:window-inactive {
-	background: rgba(58,122,254,0.4); 
+	background: #DDD; 
 }
 
 // profile-info
@@ -381,13 +381,157 @@
     }
     .iframe-inner{
       position: absolute;
-      left: 16px;
-      top: 33px;
-      width: 87%;
-      height: 90%;
+      left: 15px;
+      top: 14px;
+      width: 88%;
+      height: 95%;
       z-index: 400;
       overflow: hidden;
-      border-radius: 20px; 
+      background: #FFF;
+      padding-top: 23px;
+      // border-radius: 20px;
+      &::after{
+        content: "";
+        background: #DDD;
+        left: 40%;
+        width: 29px;
+        height: 4px;
+        position: absolute;
+        top: 8px;
+        z-index: 9;
+        border-radius: 5%;
+      }
+      &::before{
+        content: "";
+        background: #DDD;
+        left: 60%;
+        width: 5px;
+        height: 5px;
+        position: absolute;
+        top: 8px;
+        z-index: 9;
+        border-radius: 50%;
+      }
+      background: #FFF;  
+      .header-mobile{
+        position: absolute;
+        width: 100%;
+        padding: 2px;
+        background: #FFF;
+        .header-mobile__list{
+          display: flex;
+          justify-content: space-between;
+          li{
+            img{
+              width: 18px;
+            }
+            .logo{
+              width: 85px;
+            }
+          }
+        }
+      }
+      .menu-mobile{
+        position: relative;
+        width: 100%;
+        height: 86%;
+        top: 31px;
+        .card{
+          position: absolute;
+          overflow : auto;
+          margin-bottom: 0;
+          background: #FFF;
+          width: 100%;
+          box-shadow: none;
+
+          .card-body{
+            padding: 0px;
+            .nav{
+              background: #ebeef6;
+              margin-bottom: 0 !important;
+              width: 30%;
+              .nav-link{
+                font-size: 10px;
+                border-radius: 0;
+                width: 100%;
+                padding: 12px 6px;
+                font-weight: bold;
+                text-align: center;
+              }
+            }
+            .tab-content {
+              padding: 5px;
+              width: 70%;
+              .card{
+                position: relative;
+                .accordion{
+                  .accordion__header{
+                    padding: 5px;
+                    border: none;
+                  }
+                  .accordion__body{
+                    border: none;
+                    .style-imge{
+                      display: flex; 
+                      width : 100%; 
+                      margin-bottom: 10px;
+                      &.style-imge1{
+                        display: flex; 
+                        width : 100%; 
+                        img{
+                          width : 100%
+                        }
+                      }
+                      &.style-imge2{
+                        display: flex;
+                        justify-content: space-between;
+                        img{ 
+                          width: 48%;
+                          margin: 2px;
+                        }
+                      }
+                      &.style-imge3{
+                        display: flex;
+                        justify-content: space-between;
+                        img{
+                          width: 31.33333%;
+                          margin: 2px;
+                        }
+                      }
+                    }
+                  }
+                  .accordion__header--text{
+                    font-size: 11px;
+                    padding: 0.675rem 0.5 !important;
+                  }
+                  .accordion__header--indicator{
+                    right: 0.5625rem;
+                    font-size: 8px;
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+      .footer-mobile{
+        position: absolute;
+        width: 100%;
+        bottom : 0;
+        padding: 5px;
+        background: #FFF;
+        // box-shadow: 1px 1px 4px 0px #ddd;
+
+        .footer-mobile__list{
+          display: flex;
+          justify-content: space-between;
+         li{
+          img{
+            width: 30px;
+          }
+         }
+        }
+      }
     }
   }
   @media(max-width : 767px){
@@ -399,8 +543,95 @@
     height: 97vh; 
     .screen-inner{
       .iframe-inner{
-        left: 18px; 
+        left: 16px;
       }
     }
   } 
 }
+.style-imge{
+  display: flex; 
+  width : 100%; 
+  margin-bottom: 5px;
+  .img-wrapper{ 
+    position: relative;
+    img{
+      width : 100%
+    }
+  }
+  &.style-imge1{
+    display: flex; 
+    width : 100%; 
+    img{
+      width : 100%
+    }
+  }
+  &.style-imge2{
+    display: flex;
+    justify-content: space-between;
+    img{ 
+      width: 48%;
+      margin: 2px;
+    }
+  }
+  &.style-imge3{
+    display: flex;
+    justify-content: space-between;
+    .img-wrapper{
+      width: 31.33333%;
+      margin: 2px;
+      position: relative;
+      img{
+        width : 100%
+      }
+    }
+  }
+  .img-wrapper{
+    .style__action{
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      ul{
+        display: flex;
+        .btn {
+          padding: 3px !important;
+          margin : 5px
+        }
+      }
+    }
+  }
+}
+.dd-handle:active{
+  box-shadow: 1px 1px 5px 1px #ddd; 
+}
+// Nestable
+.sidebar-item{
+  &.active{
+    box-shadow: 1px 1px 5px 1px #181f39;
+    border-radius: 5px;
+  }
+}
+
+// poupup
+.modal{
+  &.model--cancle{
+    .modal-header{
+      border-bottom: 0;
+    }
+    .modal-body{
+      text-align: center;
+      p{
+        color: #f25767;
+        margin: 30px 0;
+        font-weight: 600;
+      }
+      .btn{
+        &.btn-danger{
+          background-color: #f25767;
+          border-color: #f25767;
+          color: #FFF;
+        }
+      }
+    }
+  }
+}
+ 
