--- a/scss/main.css
+++ b/scss/main.css
@@ -29259,4 +29259,208 @@ html[dir="rtl"] [direction="rtl"][data-sidebar-style="compact"]:not([data-layout
 .modal-footer.model-footer--left {
   justify-content: start; }
 
+.mobile-view {
+  width: 300px;
+  height: 91vh;
+  position: fixed;
+  right: -300px;
+  top: 81px;
+  z-index: 999;
+  background: #fff;
+  transition: all 0.8s; }
+  .mobile-view .card {
+    background: #e8ebf4;
+    height: 100%;
+    border-radius: 0; }
+  .mobile-view .mobile__close {
+    position: absolute;
+    cursor: pointer;
+    background-repeat: no-repeat;
+    left: -32px;
+    top: 50%;
+    margin-top: 93px;
+    padding-top: 10px;
+    color: #fff;
+    width: 186px;
+    height: 32px;
+    transform: rotate(-90deg);
+    transform-origin: left top;
+    text-align: center;
+    z-index: 400;
+    background-color: #3A7AFE; }
+  .mobile-view.active-view {
+    right: 0; }
+  .mobile-view .screen-inner {
+    position: relative; }
+    .mobile-view .screen-inner .mobile-image {
+      max-width: 100%;
+      max-height: 100%; }
+    .mobile-view .screen-inner .iframe-inner {
+      position: absolute;
+      left: 15px;
+      top: 14px;
+      width: 88%;
+      height: 95%;
+      z-index: 400;
+      overflow: hidden;
+      background: #FFF;
+      padding-top: 23px;
+      background: #FFF; }
+      .mobile-view .screen-inner .iframe-inner::after {
+        content: "";
+        background: #DDD;
+        left: 40%;
+        width: 29px;
+        height: 4px;
+        position: absolute;
+        top: 8px;
+        z-index: 9;
+        border-radius: 5%; }
+      .mobile-view .screen-inner .iframe-inner::before {
+        content: "";
+        background: #DDD;
+        left: 60%;
+        width: 5px;
+        height: 5px;
+        position: absolute;
+        top: 8px;
+        z-index: 9;
+        border-radius: 50%; }
+      .mobile-view .screen-inner .iframe-inner .header-mobile {
+        position: absolute;
+        width: 100%;
+        padding: 2px;
+        background: #FFF; }
+        .mobile-view .screen-inner .iframe-inner .header-mobile .header-mobile__list {
+          display: flex;
+          justify-content: space-between; }
+          .mobile-view .screen-inner .iframe-inner .header-mobile .header-mobile__list li img {
+            width: 18px; }
+          .mobile-view .screen-inner .iframe-inner .header-mobile .header-mobile__list li .logo {
+            width: 85px; }
+      .mobile-view .screen-inner .iframe-inner .menu-mobile {
+        position: relative;
+        width: 100%;
+        height: 86%;
+        top: 31px; }
+        .mobile-view .screen-inner .iframe-inner .menu-mobile .card {
+          position: absolute;
+          overflow: auto;
+          margin-bottom: 0;
+          background: #FFF;
+          width: 100%;
+          box-shadow: none; }
+          .mobile-view .screen-inner .iframe-inner .menu-mobile .card .card-body {
+            padding: 0px; }
+            .mobile-view .screen-inner .iframe-inner .menu-mobile .card .card-body .nav {
+              background: #ebeef6;
+              margin-bottom: 0 !important;
+              width: 30%; }
+              .mobile-view .screen-inner .iframe-inner .menu-mobile .card .card-body .nav .nav-link {
+                font-size: 10px;
+                border-radius: 0;
+                width: 100%;
+                padding: 12px 6px;
+                font-weight: bold;
+                text-align: center; }
+            .mobile-view .screen-inner .iframe-inner .menu-mobile .card .card-body .tab-content {
+              padding: 5px;
+              width: 70%; }
+              .mobile-view .screen-inner .iframe-inner .menu-mobile .card .card-body .tab-content .card {
+                position: relative; }
+                .mobile-view .screen-inner .iframe-inner .menu-mobile .card .card-body .tab-content .card .accordion .accordion__header {
+                  padding: 5px;
+                  border: none; }
+                .mobile-view .screen-inner .iframe-inner .menu-mobile .card .card-body .tab-content .card .accordion .accordion__body {
+                  border: none; }
+                  .mobile-view .screen-inner .iframe-inner .menu-mobile .card .card-body .tab-content .card .accordion .accordion__body .style-imge {
+                    display: flex;
+                    width: 100%;
+                    margin-bottom: 10px; }
+                    .mobile-view .screen-inner .iframe-inner .menu-mobile .card .card-body .tab-content .card .accordion .accordion__body .style-imge.style-imge1 {
+                      display: flex;
+                      width: 100%; }
+                      .mobile-view .screen-inner .iframe-inner .menu-mobile .card .card-body .tab-content .card .accordion .accordion__body .style-imge.style-imge1 img {
+                        width: 100%; }
+                    .mobile-view .screen-inner .iframe-inner .menu-mobile .card .card-body .tab-content .card .accordion .accordion__body .style-imge.style-imge2 {
+                      display: flex;
+                      justify-content: space-between; }
+                      .mobile-view .screen-inner .iframe-inner .menu-mobile .card .card-body .tab-content .card .accordion .accordion__body .style-imge.style-imge2 img {
+                        width: 48%;
+                        margin: 2px; }
+                    .mobile-view .screen-inner .iframe-inner .menu-mobile .card .card-body .tab-content .card .accordion .accordion__body .style-imge.style-imge3 {
+                      display: flex;
+                      justify-content: space-between; }
+                      .mobile-view .screen-inner .iframe-inner .menu-mobile .card .card-body .tab-content .card .accordion .accordion__body .style-imge.style-imge3 img {
+                        width: 31.33333%;
+                        margin: 2px; }
+                .mobile-view .screen-inner .iframe-inner .menu-mobile .card .card-body .tab-content .card .accordion .accordion__header--text {
+                  font-size: 11px;
+                  padding: 0.675rem 0.5 !important; }
+                .mobile-view .screen-inner .iframe-inner .menu-mobile .card .card-body .tab-content .card .accordion .accordion__header--indicator {
+                  right: 0.5625rem;
+                  font-size: 8px; }
+      .mobile-view .screen-inner .iframe-inner .footer-mobile {
+        position: absolute;
+        width: 100%;
+        bottom: 0;
+        padding: 5px;
+        background: #FFF; }
+        .mobile-view .screen-inner .iframe-inner .footer-mobile .footer-mobile__list {
+          display: flex;
+          justify-content: space-between; }
+          .mobile-view .screen-inner .iframe-inner .footer-mobile .footer-mobile__list li img {
+            width: 30px; }
+  @media (max-width: 767px) {
+    .mobile-view {
+      top: 60px;
+      height: 97vh; } }
+  @media (max-width: 575px) {
+    .mobile-view {
+      top: 60px;
+      height: 97vh; }
+      .mobile-view .screen-inner .iframe-inner {
+        left: 16px; } }
+
+.style-imge {
+  display: flex;
+  width: 100%;
+  margin-bottom: 5px; }
+  .style-imge .img-wrapper {
+    position: relative; }
+    .style-imge .img-wrapper img {
+      width: 100%; }
+  .style-imge.style-imge1 {
+    display: flex;
+    width: 100%; }
+    .style-imge.style-imge1 img {
+      width: 100%; }
+  .style-imge.style-imge2 {
+    display: flex;
+    justify-content: space-between; }
+    .style-imge.style-imge2 img {
+      width: 48%;
+      margin: 2px; }
+  .style-imge.style-imge3 {
+    display: flex;
+    justify-content: space-between; }
+    .style-imge.style-imge3 .img-wrapper {
+      width: 31.33333%;
+      margin: 2px;
+      position: relative; }
+      .style-imge.style-imge3 .img-wrapper img {
+        width: 100%; }
+  .style-imge .img-wrapper .style__action {
+    position: absolute;
+    bottom: 0;
+    right: 0; }
+    .style-imge .img-wrapper .style__action ul {
+      display: flex; }
+      .style-imge .img-wrapper .style__action ul .btn {
+        padding: 3px !important;
+        margin: 5px; }
+
+.dd-handle:active {
+  box-shadow: 1px 1px 5px 1px #ddd; }
+
 /*# sourceMappingURL=main.css.map */
