--- a/scss/components/charts/_chart-flot.scss
+++ b/scss/components/charts/_chart-flot.scss
@@ -15,7 +15,7 @@
   .legendLabel {
     font-size: 0.825rem;
     padding-left: .5rem; 
-    color: $white;
+    color: #000;
   }
     
 .flotTip {
