--- a/scss/components/ui/_ui-card.scss
+++ b/scss/components/ui/_ui-card.scss
@@ -140,6 +140,9 @@
         margin-bottom: 20px;
         overflow-y: scroll;
         height: 550px;
+        @media(max-width : 767px){
+            height: auto;
+        }
     }
     
 }
