--- a/scss/custom/_custom.scss
+++ b/scss/custom/_custom.scss
@@ -348,6 +348,7 @@
   z-index: 999;
   background: #fff;
   transition: all 0.8s;
+  
   .card{
     background : #e8ebf4;
     height: 100%;
@@ -635,3 +636,116 @@
   }
 }
  
+// chart.js in android 
+.card{
+  &.card--flotLine1{
+    height: 30rem !important; 
+    .card-header{
+      flex-direction: column;
+      align-items: flex-start;
+      // border-bottom: none;
+      .card-title{
+        padding-bottom : 0.5rem
+      }
+      .total-number{
+        color : #000;
+        font-size : 1rem;
+      }
+    } 
+  }
+}
+.flot-chart{ 
+  table{
+    bottom: -60px !important; 
+    top: auto !important; 
+    left : 0 !important;  
+    right : auto;
+    width: 100%;
+    tbody{
+      display: flex;
+      // justify-content: space-between;
+      width: 100%;
+      tr{ 
+          padding-right : 1rem 
+      }
+    }
+  }
+}
+// chart.js in notification
+ .tab-content{
+  &.tab-content--chart{
+    display: flex;
+    width: 100%;
+    .tab-content-data{
+      width:30%; 
+      .tab-data-list{
+        display: flex;
+        justify-content: space-between;
+        flex-direction: column;
+        .data-item{
+          padding-bottom: 10px; 
+          .details{
+            .details-name{
+              font-size : 1rem;
+              color: #89879f;
+            }
+            .details-info{
+              span{
+                font-size: 1.2rem; 
+                position: relative; 
+                padding-left: 1.8rem;
+                &::before{
+                  content: "";
+                  width: 20px;
+                  height: 20px;
+                  position: absolute; 
+                  left : 0;
+                  top: 0px;
+                }
+                 &.number-color1{
+                  color: #3A7AFE;
+                  &::before{ 
+                    background-color: #3A7AFE; 
+                  }
+                }
+                &.number-color2{
+                  color: #6f42c1;
+                  &::before{ 
+                    background-color: #6f42c1; 
+                  }
+                }
+                &.number-color3{
+                  color: #ff9f00;
+                  &::before{ 
+                    background-color: #ff9f00; 
+                  }
+                }
+                &.number-color4{
+                  color: #f25767;
+                  &::before{ 
+                    background-color: #f25767; 
+                  }
+                }  
+              }
+            }
+          }
+        }
+      }
+    }
+    .tab-pane{
+      width: 70%; 
+    } 
+  }
+ }
+ @media (max-width : 1023px){
+  .tab-content{
+    &.tab-content--chart{ 
+      .tab-content-data{
+        display : none;
+      }
+      .tab-pane{
+        width: 100%; 
+      }
+    }
+   }
+ }
