--- a/scss/main.css
+++ b/scss/main.css
@@ -21164,7 +21164,7 @@ Fixing Order => Base + Typography >> General Layout + Grid >> Page Layout + Comp
 .legendLabel {
   font-size: 0.825rem;
   padding-left: .5rem;
-  color: #fff; }
+  color: #000; }
 
 .flotTip {
   background: #000;
@@ -24227,7 +24227,12 @@ button {
     .card.card--active .media-body .text-sm {
       color: #FFF; }
   .card.card--category {
-    margin-bottom: 20px; }
+    margin-bottom: 20px;
+    overflow-y: scroll;
+    height: 550px; }
+    @media (max-width: 767px) {
+      .card.card--category {
+        height: auto; } }
 
 .transparent-card.card {
   background: transparent;
@@ -29211,7 +29216,7 @@ html[dir="rtl"] [direction="rtl"][data-sidebar-style="compact"]:not([data-layout
   align-items: center; }
 
 ::-webkit-scrollbar {
-  width: 10px; }
+  width: 6px; }
 
 ::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
@@ -29225,7 +29230,7 @@ html[dir="rtl"] [direction="rtl"][data-sidebar-style="compact"]:not([data-layout
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5); }
 
 ::-webkit-scrollbar-thumb:window-inactive {
-  background: rgba(58, 122, 254, 0.4); }
+  background: #DDD; }
 
 .data-info .table.table-striped tbody tr:nth-of-type(odd), .data-info .table.table-hover tr:hover {
   background-color: transparent !important; }
@@ -29462,5 +29467,22 @@ html[dir="rtl"] [direction="rtl"][data-sidebar-style="compact"]:not([data-layout
 
 .dd-handle:active {
   box-shadow: 1px 1px 5px 1px #ddd; }
+
+.sidebar-item.active {
+  box-shadow: 1px 1px 5px 1px #181f39;
+  border-radius: 5px; }
+
+.modal.model--cancle .modal-header {
+  border-bottom: 0; }
+.modal.model--cancle .modal-body {
+  text-align: center; }
+  .modal.model--cancle .modal-body p {
+    color: #f25767;
+    margin: 30px 0;
+    font-weight: 600; }
+  .modal.model--cancle .modal-body .btn.btn-danger {
+    background-color: #f25767;
+    border-color: #f25767;
+    color: #FFF; }
 
 /*# sourceMappingURL=main.css.map */
